Fix(missing testing) creating and verifying new tests (#104)
* Updated SecurityConfig to have new role information

Updated UserController for new role APIs
Updated User.java and driver.java for user related things

Added two new exceptiosn and updated GlobalHandler

Added Role and Permission classes

* updated controller and order permissions

* finished updating order stuff

* updated controllers to have preauthorize and fix with the permissionservice

* worked on updating driver stuff

* updated delivery and payment stuff

* finished product

* update the token filters to use role stuff

* Fixed compiling errors with orderControllerTest
and PaymentControllerTest

* Added some TODO and fixed test errors

* Finished all the todos. Finished updating the final bits on controllers, DTOs, service, securityConfig, and entity classes

* updated schema

* Updated DeliveryDTO and Mapper for testing

* Tested Category Mapper

* Tested DriverMapper and fixed some missing setters between conversions.

* Skeleton code for remaining Mapper Tests

* Fixed Test code changes from role management feature implementation

* Fixed unneccessary stubbing issue

* Fixed issues with test cases since implementation was updated.

* Fixed bug with status not actually updating

* Fixed tests for Delivery Controller

* Completed fixing of Merchant Testing

* Fixed test cases for User Controller.

* Completed Driver Controller testing and extended functionality for checks

* Completed Order Controller Testing

* Spotless Checks

* Updated SecurityConfig to have new role information

Updated UserController for new role APIs
Updated User.java and driver.java for user related things

Added two new exceptiosn and updated GlobalHandler

Added Role and Permission classes

* updated controller and order permissions

* finished updating order stuff

* updated controllers to have preauthorize and fix with the permissionservice

* worked on updating driver stuff

* updated delivery and payment stuff

* f